# asm

./: README.md  build.sh  go.mod  index.html  main.go  quick_build.sh  styles.css
Tast1/: Makefile  README.md  advanced_number_checker.asm  even_odd_checker.asm  even_odd_checker_winapi.asm
qt_example/: CMakeLists.txt  main.cpp
rust_example/: Cargo.toml
rust_example/src/: main.rs
